# dmsp_ssm

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dmsp_ssm/: __init__.py  parse_options.py  parse_result.py  reader.py
tests/: conftest.py
tests/integration/: test_data_source.py  test_reader.py  test_real_artifacts.py
tests/unit/: test_assembler_contract.py  test_builder_contract.py  test_data_layer_boundaries.py  test_data_source_file_enumeration.py  test_decoder_basic.py  test_decoder_boundary.py  test_field_trace.py  test_field_trace_extractor_record_fields.py  test_field_trace_extractor_second_fields.py  test_field_trace_extractor_unified.py  test_file_parse_result_contract.py  test_format_definition.py  test_format_layout.py  test_in_memory_assembler.py  test_missing_minutes.py  test_numpy_builder.py  test_package.py  test_parse_options.py  test_parse_result.py  test_parse_result_assembler.py  test_pre_parse_estimate.py  test_profile_artifact_requirements.py  test_raw_field_reader.py  test_raw_trace_reader.py  test_reader_artifact_accumulation.py  test_reader_canonical_boundaries.py  test_reader_default_parse_profile.py  test_reader_deterministic_ordering.py  test_reader_exception_vs_report_policy.py  test_reader_extension_hooks.py  test_reader_orchestration_entry_points.py  test_reader_parse_contract.py  test_reader_runtime.py  test_record_parser.py  test_report_aggregation.py  test_table_builder.py  test_table_profile_contract.py  test_transform_engine.py  test_validation_field_resolver.py  test_validation_report_adapter.py  (+2 more)
(+45 files in other folders)
