[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dmsp-ssm"
version = "1.0.0"
description = "Python library for parsing DMSP SSM binary files."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "DMSP SSM contributors"},
]
keywords = ["dmsp", "ssm", "satellite", "magnetometer", "xarray"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "xarray>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/scvarr/dmsp_ssm"
Repository = "https://github.com/scvarr/dmsp_ssm"
Issues = "https://github.com/scvarr/dmsp_ssm/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast unit and contract tests",
    "integration: file-based integration tests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
